# nerva-pool-miner

./: .gitignore  .gitmodules  .project  ANONYMITY_NETWORKS.md  Angry Wasp.asc  Ascii-Logo-Small.txt  Ascii-Logo.txt  Ascii-Text.txt  CMakeLists.txt  Makefile  README.md  bp-test  build-nerva  builder  compile_commands.json  decodeouts  deploy  docker-builder  hw-tn.cache  hw-tn.cache.address.txt  hw-tn.keys  hw.cache.address.txt  nerva.kdev4  pooled.asc  sn  sn.1  stagenet  stagenet.1
.kdev4/: nerva.kdev4
builder/: Dockerfile  android-builder  build  build-docker  build_curl  build_curl_win  check_aesni.c  debug  dependencies  deploy  dev  docker  env  environment  helpers  info.plist.template  linux  linux-builder  linux-dynamic  linux-helpers  linux-static  mac  mac-static  nerva-logo.icns  single  single-noaes  windows  windows-dev
cmake/: 32-bit-toolchain.cmake  64-bit-toolchain.cmake  FindReadline.cmake  windows-x64-cross-compile.cmake  windows-x86-cross-compile.cmake
contrib/: CMakeLists.txt
contrib/brew/: Brewfile
contrib/snap/: snapcraft.yaml
gpg_keys/: AngryWasp.asc  R0BC0D3R.asc
src/: CMakeLists.txt  cryptonote_config.h  version.cpp.in
src/blockchain_db/: CMakeLists.txt  blockchain_db.cpp  blockchain_db.h  testdb.h
src/blockchain_utilities/: CMakeLists.txt  blockchain_ancestry.cpp  blockchain_blackball.cpp  blockchain_depth.cpp  blockchain_export.cpp  blockchain_import.cpp  blockchain_stats.cpp  blockchain_usage.cpp  bootstrap_file.cpp  bootstrap_serialization.h  checkpoint_export.cpp  quicksync_file.h
src/checkpoints/: CMakeLists.txt  checkpoints.cpp  quicksync.cpp  quicksync.h
src/common/: CMakeLists.txt  dns_config.cpp  dns_config.h  dns_utils.cpp  dns_utils.h  download.cpp  i18n.cpp  perf_timer.cpp  updates.cpp  updates.h  util.cpp  util.h  xnv_https.cpp  xnv_https.h
src/extras/: CMakeLists.txt
src/extras/blockchain_prune/: CMakeLists.txt  blockchain_prune.cpp
src/extras/gen_multisig/: CMakeLists.txt  gen_multisig.cpp
src/extras/gen_ssl_cert/: CMakeLists.txt  gen_ssl_cert.cpp
src/extras/quicksync_export/: CMakeLists.txt  quicksync_export.cpp  quicksync_file.cpp  quicksync_file.h
translations/: CMakeLists.txt  monero.ts  monero_fr.ts  monero_it.ts  monero_ja.ts  monero_sv.ts
(+178 files in other folders)
